# One-Sided-Sequent-Calculus

./: .gitignore  :  Makefile  README.md  build_web.sh  one-sided-sequent.cabal  packages.dhall  spago.dhall  spago.yaml
.github/workflows/: static.yml
CounterExamples/: cex01.os  cex02.os  cex03.os  cex04.os  cex05.os  cex06.os  cex07.os  cex08.os  cex09.os  cex10.os  cex11.os  cex12.os  cex13.os  cex14.os  cex15.os  cex16.os  cex17.os  cex18.os  dupDecl.os  dupXtor.os
Documentation/: Compilation.md  Grammar.md  Installation.md  Kinding.md  Language.md  Purescript.md  Syntax.md  TypeInference.md  Web.md
Examples/: Bool.hs  Bool.os  Examples.hs  Fun.os  LPair.hs  LPair.os  List.hs  List.os  Nat.os  Pair.hs  Pair.os  Stream.hs  Stream.os  TwoSidedExamples.hs  Unit.os  test.os
app/: Examples.hs  Main.hs  TwoSidedExamples.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.3/: one-sided-sequent-0.1-inplace-lang.conf  package.cache
fs/Files/: Definition.hs  Loader.hs
main/: Main.hs
old/CounterExamples/: cex03.os  cex07.os  cex14.os  cex15.os
old/Examples/: Fun.os
old/one-sided-files/: spago.yaml
old/one-sided-tests/: Main.purs
old/web-app-old/: index.html
one-sided-checking/: spago.dhall  spago.yaml
one-sided-checking/TypeCheck/: Definition.hs  Definition.purs  Errors.hs  Errors.purs  Program.hs  Terms.hs  Types.hs
one-sided-checking/src/TypeCheck/: Definition.purs  Errors.purs  Program.purs  Terms.purs  Types.purs
one-sided-defs/: Common.hs  Common.purs  Environment.hs  Errors.hs  Loc.hs  spago.dhall  spago.yaml
one-sided-defs/Embed/: Definition.purs  EmbedDesugared.hs  EmbedDesugared.purs  EmbedKinded.purs  EmbedTyped.hs
one-sided-defs/Pretty/: Common.hs  Common.purs  Desugared.hs  Desugared.purs  Environment.hs  Errors.hs  Parsed.hs  Parsed.purs  Typed.hs
one-sided-defs/Syntax/Desugared/: Program.hs  Program.purs  Terms.hs  Types.hs
one-sided-defs/Syntax/Kinded/: FreeVars.hs  FreeVars.purs  Substitution.hs  Substitution.purs
one-sided-defs/Syntax/Parsed/: Program.hs  Terms.hs  Terms.purs  Types.hs
one-sided-defs/Syntax/Typed/: FreeVars.hs  Program.hs  Program.purs  Substitution.hs  Substitution.purs  Terms.hs  Types.hs  Types.purs
one-sided-defs/src/: Common.purs  Environment.purs  Errors.purs  Loc.purs
one-sided-defs/src/FreeVars/: FreeKindvars.purs  FreeTypevars.purs  FreeVariables.purs
one-sided-defs/src/Freevars/: FreeKindvars.purs  (+1 more)
one-sided-depcheck/: spago.dhall  spago.yaml
one-sided-depcheck/Dependencies/: Definition.hs  Definition.purs  Errors.hs  Graph.hs  ImportsGraph.hs  VariablesGraph.hs  VariablesGraph.purs
one-sided-desugar/: spago.dhall  spago.yaml
one-sided-desugar/Desugar/: Definition.hs  Definition.purs  Errors.hs  Program.hs  Terms.hs  Types.hs  Types.purs
one-sided-desugar/Embed/: EmbedTyped.hs
one-sided-desugar/Pretty/: Desugared.hs  Typed.hs
one-sided-driver/: spago.dhall  spago.yaml
one-sided-driver/Driver/: Definition.hs  Driver.hs  Driver.purs  Errors.hs
one-sided-driver/Pretty/: Driver.hs
one-sided-eval/: spago.dhall  spago.yaml
one-sided-eval/Eval/: Definition.hs  Eval.hs  Focusing.hs  Focusing.purs
one-sided-eval/Pretty/: Eval.hs
one-sided-examples/: spago.dhall  spago.yaml
one-sided-examples/src/: CounterExamples.purs  ImportLibs.js  ImportLibs.purs  StandardLib.purs
one-sided-examples/stdlib/: Bool.os  Fun.os  LPair.os  List.os  Maybe.os  Nat.os  Pair.os  Prelude.os  Stream.os  Unit.os  libToJs.sh
one-sided-files/: spago.yaml
one-sided-files/Files/: Definition.hs  Loader.hs
one-sided-inference/: Constraints.hs  InferDecl.hs  spago.dhall  spago.yaml
one-sided-inference/GenerateConstraints/: Definition.hs  Errors.hs  Terms.hs  Terms.purs  Types.hs
one-sided-inference/Pretty/: TypeInference.hs  TypeInference.purs
one-sided-inference/SolveConstraints/: Definition.hs  Definition.purs  Errors.hs  Errors.purs  Solver.hs
one-sided-inference/src/: Constraints.purs  InferDecl.purs
one-sided-kinding/: spago.dhall  spago.yaml
one-sided-kinding/Kinding/: Definition.hs  Errors.hs  Errors.purs  Program.hs  Terms.hs  Types.hs
one-sided-main/: Main.hs  spago.yaml
one-sided-main/src/: Main.purs
one-sided-parser/: Errors.hs  spago.dhall  spago.yaml
one-sided-parser/Parser/: Common.hs  Definition.hs  Errors.hs  Keywords.hs  Lexer.hs  Lexer.purs  Program.hs  Symbols.hs  Symbols.purs  Terms.hs  Terms.purs  Types.hs  Types.purs
one-sided-parser/Pretty/: Parsed.hs
one-sided-tests/: Main.hs
one-sided-web/: spago.dhall  spago.yaml
one-sided-web/src/: Definitions.purs  EditorMod.js  EditorMod.purs  Events.purs  Layout.purs  Runner.purs  Types.purs  index.html  languageDefinition.js
src/: Common.hs  EmbedTyped.hs  Environment.hs  Errors.hs  Eval.hs  Files.hs  Main.purs  Pretty.hs  Program.hs  Substitution.hs  Syntax.hs  Types.hs  Utils.hs
src/Dependencies/: Definition.hs  ImportsGraph.hs  VariablesGraph.hs
src/Desugar/: Definition.hs  Program.hs  Terms.hs  Types.hs
src/Driver/: Definition.hs  Driver.hs
src/Embed/: Definition.hs  EmbedDesugared.hs  EmbedTyped.hs
src/Eval/: Eval.hs  Focusing.hs  Substitution.hs
src/Parser/: Definition.hs  Keywords.hs  Lexer.hs  Parser.hs  Program.hs  Symbols.hs  Terms.hs  Types.hs
src/Pretty/: Common.hs  Driver.hs  Environment.hs  Errors.hs  Program.hs  Terms.hs  TypeInference.hs  Types.hs
src/TwoSided/: Eval.hs  Pretty.hs  Program.hs  Syntax.hs  Types.hs
src/TypeCheck/: Definition.hs  Program.hs  Terms.hs  Types.hs
src/TypeInference/: Constraints.hs  DataDecl.hs  Definition.hs  GenerateConstraints.hs  InferDecl.hs  SolveConstraints.hs  Types.hs
src/Typed/: Program.hs  Syntax.hs  Types.hs
src/Untyped/: Program.hs  Syntax.hs
test/: Definition.purs  Main.hs  Main.purs
web-app/: Callback.purs  JSBits.hs  Main.hs  StringFormat.hs  StringFormat.purs  index.html  index.js  languageDefinition.js  main.css  main.js  spago.yaml
web-app/src/: Definitions.purs  Events.purs  Layout.purs  Main.purs  Runner.purs
(+82 files in other folders)
