cabal-version: 3.0
name:          one-sided-sequent
version:       0.1
synopsis:      one sided sequent calculus language
category:      Development
build-type:    Simple

common all
  ghc-options: -Wall -Wno-orphans
  default-extensions: DataKinds,
                      DerivingStrategies
  default-language:   GHC2021
  build-depends:      base >=4.18.0.0,
                      containers,
                      megaparsec,
                      monadplus,
                      mtl

library parser 
  import:          all 
  exposed-modules: Syntax.Parsed.Terms,
                   Syntax.Parsed.Program,
                   Syntax.Parsed.Types,
                   Parser.Definition,
                   Parser.Keywords,
                   Parser.Symbols,
                   Parser.Lexer,
                   Parser.Program,
                   Parser.Types,
                   Parser.Terms,
                   Common,
                   Errors,
                   Pretty.Errors,
                   Pretty.Common,
                   Pretty.Parsed
  hs-source-dirs:  one-sided-parser

library env
  import:          all
  build-depends:   parser
  exposed-modules: Syntax.Typed.Terms,
                   Syntax.Typed.Types,
                   Syntax.Typed.Program,
                   Syntax.Typed.Substitution,
                   Syntax.Typed.FreeVars,
                   Environment,
  hs-source-dirs:  one-sided-env

library desugar 
  import:          all
  build-depends:   parser,
                   env
  exposed-modules: Syntax.Desugared.Program,
                   Syntax.Desugared.Terms,
                   Syntax.Desugared.Types,
                   Desugar.Definition,
                   Desugar.Terms,
                   Desugar.Program,
                   Desugar.Types,
                   Embed.Definition,
                   Embed.EmbedDesugared,
                   Embed.EmbedTyped,
                   Pretty.Desugared,
                   Pretty.Typed,
                   Pretty.Environment
  hs-source-dirs:  one-sided-desugar

library inference
  import:          all 
  build-depends:   parser,
                   desugar,
                   env
  exposed-modules: GenerateConstraints.Definition,
                   GenerateConstraints.Terms,
                   SolveConstraints.Definition,
                   SolveConstraints.Solver,
                   Constraints,
                   InferDecl,
                   Pretty.TypeInference
  hs-source-dirs:  one-sided-inference

library typecheck
  import:          all 
  build-depends:   parser,
                   desugar,
                   env
  exposed-modules: TypeCheck.Definition,
                   TypeCheck.Terms,
                   TypeCheck.Types,
                   TypeCheck.Program,
  hs-source-dirs:  one-sided-checking

                   
library lang
  import:           all
  build-depends:    parser,
                    desugar,
                    env,
                    inference,
                    typecheck,
                    eval
  exposed-modules:  Driver.Driver,
                    Driver.Definition,

                    Dependencies.Graph,
                    Dependencies.Definition,
                    Dependencies.ImportsGraph,
                    Dependencies.VariablesGraph,

                    Pretty.Driver,
  hs-source-dirs:   src

library eval
  import:          all
  build-depends:   parser,
                   env
  exposed-modules: Eval.Definition,
                   Eval.Focusing,
                   Eval.Eval,
  hs-source-dirs:  one-sided-eval

library fs
  import:          all 
  build-depends:   lang,
                   directory,
                   filepath,
                   text,
                   parser
  exposed-modules: Files.Definition,
                   Files.Loader
  hs-source-dirs:  fs


executable main
  import:           all
  main-is:          Main.hs
  build-depends:    lang,
                    fs,
                    parser,
                    desugar,
                    inference,
                    env
  hs-source-dirs:   app

executable test-suite
  import:         all
  main-is:        Main.hs
  build-depends:  lang,
                  fs,
                  parser,
                  env
  hs-source-dirs: test

executable web-app
  import:          all
  main-is:         Main.hs 
  build-depends:   lang,
                   parser,
                   desugar,
                   inference,
                   env
  hs-source-dirs:  web-app
  other-modules:   Callback,
                   JSBits
