cabal-version: 3.0
name:          one-sided-sequent
version:       0.1
synopsis:      one sided sequent calculus language
category:      Development
build-type:    Simple

common all
  ghc-options: -Wall -Wno-orphans
  default-extensions: 
                      DerivingStrategies
  default-language:   GHC2021
  build-depends:      base >=4.18.0.0,

common libs
  build-depends: containers,
                 mtl

library definitions
  import:          all,
                   libs
  exposed-modules: Syntax.Parsed.Terms,
                   Syntax.Parsed.Program,
                   Syntax.Parsed.Types,
                   Pretty.Parsed,

                   Syntax.Typed.Terms,
                   Syntax.Typed.Types,
                   Syntax.Typed.Program,
                   Syntax.Typed.Substitution,
                   Syntax.Typed.FreeVars,
                   Pretty.Typed,

                   Syntax.Desugared.Program,
                   Syntax.Desugared.Terms,
                   Syntax.Desugared.Types,
                   Pretty.Desugared,

                   Syntax.Kinded.Program,
                   Syntax.Kinded.Terms,
                   Syntax.Kinded.Types,
                   Syntax.Kinded.FreeVars,
                   Syntax.Kinded.Substitution,
                   Pretty.Kinded,

                   Environment,
                   Pretty.Environment,

                   Embed.Definition,
                   Embed.EmbedDesugared,
                   Embed.EmbedTyped,
                   Embed.EmbedKinded,

                   Common,
                   Pretty.Common,

                   Errors,
                   Loc
  hs-source-dirs:  one-sided-defs

library parser 
  import:          all,
                   libs
  build-depends:   megaparsec,
                   monadplus,
                   definitions
  exposed-modules: Parser.Definition,
                   Parser.Errors,
                   Parser.Common,
                   Parser.Keywords,
                   Parser.Symbols,
                   Parser.Lexer,
                   Parser.Program,
                   Parser.Types,
                   Parser.Terms,
  hs-source-dirs:  one-sided-parser

library depcheck
  import:          all,
                   libs
  build-depends:   definitions,
  exposed-modules: Dependencies.Graph,
                   Dependencies.Definition,
                   Dependencies.ImportsGraph,
                   Dependencies.VariablesGraph,
                   Dependencies.Errors
  hs-source-dirs: one-sided-depcheck

library desugar 
  import:          all,
                   libs
  build-depends:   definitions,
  exposed-modules: Desugar.Definition,
                   Desugar.Terms,
                   Desugar.Program,
                   Desugar.Types,
                   Desugar.Errors
  hs-source-dirs:  one-sided-desugar

library inference
  import:          all,
                   libs
  build-depends:   definitions,
                   desugar,
  exposed-modules: GenerateConstraints.Definition,
                   GenerateConstraints.Terms,
                   GenerateConstraints.Types,
                   GenerateConstraints.Errors,
                   SolveConstraints.Definition,
                   SolveConstraints.Solver,
                   SolveConstraints.Errors,
                   Constraints,
                   InferDecl,
                   Pretty.TypeInference
  hs-source-dirs:  one-sided-inference

library typecheck
  import:          all,
                   libs
  build-depends:   definitions,
                   desugar,
  exposed-modules: TypeCheck.Definition,
                   TypeCheck.Terms,
                   TypeCheck.Types,
                   TypeCheck.Program,
                   TypeCheck.Errors
  hs-source-dirs:  one-sided-checking

library kinding
  import:          all,
                   libs
  build-depends:   definitions 
  exposed-modules: Kinding.Definition,
                   Kinding.Errors,
                   Kinding.Terms,
                   Kinding.Program,
                   Kinding.Types
  hs-source-dirs:  one-sided-kinding

library driver
  import:           all,
                    libs
  build-depends:    definitions,
                    parser,
                    desugar,
                    inference,
                    typecheck,
                    eval,
                    depcheck,
                    kinding
  exposed-modules:  Driver.Driver,
                    Driver.Definition,
                    Driver.Errors,
                    Pretty.Driver,
  hs-source-dirs:   one-sided-driver

library eval
  import:          all, 
                   libs
  build-depends:   definitions,
  exposed-modules: Eval.Definition,
                   Eval.Focusing,
                   Eval.Eval,
                   Pretty.Eval,
  hs-source-dirs:  one-sided-eval

library fileload
  import:          all,
                   libs
  build-depends:   parser,
                   definitions,
                   directory,
                   filepath,
                   text,
  exposed-modules: Files.Definition,
                   Files.Loader
  hs-source-dirs:  one-sided-files


executable main
  import:           all
  main-is:          Main.hs
  build-depends:    definitions, 
                    driver,
                    fileload,
                    eval
  hs-source-dirs:   one-sided-main

executable test-suite
  import:         all
  main-is:        Main.hs
  build-depends:  driver,
                  fileload,
                  definitions,
  hs-source-dirs: one-sided-tests

executable web-app
  import:          all
  main-is:         Main.hs 
  build-depends:   driver,
                   parser,
                   definitions,
                   eval,
  hs-source-dirs:  web-app
  other-modules:   Callback,
                   JSBits,
                   StringFormat
